# Exodus2025

./: ArmCmds.md  Git-Install  Readme
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/multi_zed_rtab/share/multi_zed_rtab/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/multi_zed_rtab/share/multi_zed_rtab/launch/: multi_zed_rtab.launch.py
log/: latest_build
mobility_ctrl/: .gitignore  commands  commands.md  frames_2025-02-14_01.19.08.gv  frames_2025-02-14_15.53.51.gv  frames_2025-02-15_01.57.43.gv  frames_2025-02-24_16.19.26.gv  frames_2025-03-03_00.00.10.gv  frames_2025-03-03_00.09.20.gv  frames_2025-06-11_15.58.06.gv  frames_2025-06-11_16.14.18.gv  frames_2025-06-12_10.55.11.gv  frames_2025-06-12_11.28.16.gv  graphing.py  msgs.txt  nearest_waypoint_distance.txt  plot_data_output.txt  plot_data_output_0_35.txt  plot_data_output_0_5.txt  plot_data_output_0_7.txt  plot_data_output_1_5.txt  plot_data_output_4_0.txt  ros2_log_KSteer_1_5.txt  ros2_log_KSteer_2.txt  tf_full.txt
mobility_ctrl/config/: multi_camera_config.yaml
mobility_ctrl/frames/: frames_2025-06-11_15.46.19.gv  frames_2025-06-11_16.34.07.gv  frames_2025-06-12_10.48.55.gv  frames_2025-06-12_12.37.52.gv  frames_2025-06-12_13.29.49.gv  frames_2025-07-06_18.36.07.gv
mobility_ctrl/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mobility_ctrl/install/controller_manager/test/: test_controller_overriding_parameters.yaml  test_controller_spawner_wildcard_entries.yaml  test_controller_spawner_with_basic_controllers.yaml  test_controller_spawner_with_interfaces.yaml  test_controller_spawner_with_type.yaml  test_ros2_control_node.yaml
mobility_ctrl/log/: latest_build  latest_list
mobility_ctrl/mobility_ctrl/: commands
mobility_ctrl/mobility_ctrl/src/description/: ackermann_rover.sdf  ackermann_rover.urdf  ackermann_steering.sdf  world_trial.sdf
mobility_ctrl/mobility_ctrl/src/nav2_stanley/: package.xml  setup.py
mobility_ctrl/mobility_ctrl/src/stanley_v1/: package.xml  plugin_description.xml
mobility_ctrl/mobility_ctrl/src/worlds/: world_trial.sdf
mobility_ctrl/src/: ackermann_rover.xacro.urdf
mobility_ctrl/src/DualCameraLaunch/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/DualCameraLaunch/launch/: ackermann_drive.launch.py  dual_camera_rtabmap.launch.py
mobility_ctrl/src/can_transceiver/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/cubemars_interface/: CMakeLists.txt  cubemars_interface.xml  package.xml
mobility_ctrl/src/cubemars_interface/src/: can.cpp  (+1 more)
mobility_ctrl/src/cubemars_test/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/drive_motor/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/fl_switch/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/follow_waypoints/: package.xml  setup.py
mobility_ctrl/src/gazebo_ackermann_control/: setup.cfg  setup.py
mobility_ctrl/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mobility_ctrl/src/jetson_arm_control/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/jetson_orin_nx_mcu/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/log/: latest_build
mobility_ctrl/src/multi_zed_rtab/: setup.cfg  setup.py
mobility_ctrl/src/nav2_ackermann/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/nav2_stanley/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/nav2_stanley/bt/: single_path.xml
mobility_ctrl/src/nav2_stanley/config/: ack_nav2_params.yaml  ack_navigation.yaml  ackermann_drive_controller.yaml  diff_drive_controller.yaml  diff_navigation.yaml  ekf.yaml  nav2_trial.yaml  navigation.yaml  ukf.yaml
mobility_ctrl/src/nav2_stanley/launch/: ack_bringup.launch.py  ack_loc2.launch.py  ack_localization.launch.py  ack_nav.launch.py  ack_rover_launch.launch.py  ack_simulation.launch.py  loc_back.txt
mobility_ctrl/src/nav2_stanley/maps/: ack_map.yaml
mobility_ctrl/src/nav2_stanley/urdf/: ack_rover.urdf  ack_rover.xacro.txt  ack_rover.xacro.urdf  ack_rover_gazebo.xacro.urdf  lidar.xacro.urdf  main_rover.xacro.urdf  zed_cameras.xacro.urdf
mobility_ctrl/src/nav2_stanley/urdf/ackermann/: ack_rover_gazebo.xacro.urdf  ackermann_drive.xacro.urdf
mobility_ctrl/src/nav2_stanley/urdf/diff_drive/: diff_drive.xacro.urdf  diff_gazebo.xacro.urdf
mobility_ctrl/src/nav2_stanley/world/: empty.sdf  sdf_to_costmap.py  world_trial.sdf
mobility_ctrl/src/pivot_motor/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/pure_p_test/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/pure_pursuit/: package.xml  setup.py
mobility_ctrl/src/rover_hw/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/rover_launch/: package.xml  setup.py
mobility_ctrl/src/science_module/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/stanley_control/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/stanley_v1/: CMakeLists.txt  package.xml
mobility_ctrl/src/stanley_v1/include/stanley_v1/: stanley_controller.hpp
mobility_ctrl/src/stanley_v1/src/: stanley_controller.cpp
mobility_ctrl/src/telecom_module/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/usb_camera_1/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/vec_pursuit/: CMakeLists.txt  package.xml  vec_pursuit_controller.xml
mobility_ctrl/src/worlds/: world_trial.sdf
mobility_ctrl/src/zed2i_camera_1/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/zed2i_camera_2/: package.xml  setup.cfg  setup.py
mobility_ctrl/src/zed2i_camera_3/: package.xml  setup.cfg  setup.py
ros2_ws/install/: setup.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/: model.sdf
ros2_ws/src/gz_plugins/: rover_velocity_plugin.cpp
ros2_ws/src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/mars_rover_control/: package.xml  setup.py
ros2_ws/src/my_robot_controller/: setup.py
telecom/: rx.py  tx.py
(+1210 files in other folders)
