<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_zed_rtab</name>
  <version>0.0.1</version>
  <description>Combined launch for ZED multi-camera and RTAB-Map</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>zed_multi_camera</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
